formatting tweaks, hide admin links if not admin, move is_admin to appcontroller

--- a/app/assets/stylesheets/shared.sass
+++ b/app/assets/stylesheets/shared.sass
@@ -34,9 +34,12 @@ ol.sub_goal
     margin-bottom: 2rem
     small
       color: #555
-      font-size: 1.5
       font-weight: 400
       display: block
+    .smaller
+      color: #888
+      font-weight: 200
+      font-size: 1.5rem
 
 .slug:hover
   background-color: #ddd
