--- a/app/views/goals/_sub_goals.slim
+++ b/app/views/goals/_sub_goals.slim
@@ -3,9 +3,12 @@
   ol.sub_goal
     - sub_goals.each do |sub_goal|
       li
-        =link_to sub_goal.name, sub_goal
+        - if(is_admin? || sub_goal.children.count > 0)
+          =link_to sub_goal.name, sub_goal
+        - else
+          = sub_goal.name
         | &nbsp;
         small
           =sub_goal.owner_name
         .smaller
-          =pluralize(sub_goal.children.count,"Child Goal") if sub_goal.children.count > 0
+          =pluralize(sub_goal.children.count,"Child") if sub_goal.children.count > 0
