allow more admins... visual cleanup.

--- a/app/assets/stylesheets/shared.sass
+++ b/app/assets/stylesheets/shared.sass
@@ -4,6 +4,12 @@
 .headings h2
   border-bottom: 1px solid #eee
 
+
+.goal_controls
+  margin: 3rem 0 4rem 0
+  .btn-sm
+    margin: 0 1rem 0 0
+
 .slug
   padding: 1px 2rem
   min-height: 30rem
