--- a/app/views/goals/_breadcrumb.html.slim
+++ b/app/views/goals/_breadcrumb.html.slim
@@ -1,5 +1,5 @@
 ol.breadcrumb
-  li =link_to "GDS Objectives", goals_path
+  li =link_to "Top-level GDS Objectives", goals_path
   - if @goal
     - g = @goal
     - ancestors = []
