--- a/app/views/goals/show.html.slim
+++ b/app/views/goals/show.html.slim
@@ -2,19 +2,18 @@
 
 .row
   .col-md-9
+    - unless (@goal.owner_name.empty?)
+      h4 =@goal.owner_name
     h1 = @goal.name
     -if is_admin?
-      =link_to :Edit, edit_goal_path, class: "btn-primary btn-sm"
-      ' &nbsp;
-      = link_to 'Destroy', @goal, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn-sm btn-danger"
+      .goal_controls
+        = link_to :Edit, edit_goal_path, class: "btn-primary btn-sm"
+        = link_to "New child objective",new_goal_path(parent_id:@goal), class: "btn-success btn-sm"
+        .pull-right
+          = link_to 'Destroy', @goal, method: :delete, data: { confirm: 'Are you sure? This cannot be undone.' }, class: "btn-sm btn-danger"
+
 
     /TODO....
     /p.lead =@goal.description
-
-    - unless (@goal.owner_name.empty?)
-      h4 =@goal.owner_name
-
-    =link_to "Create a new  objective at this level.",new_goal_path(parent_id:@goal)
-
     == render partial: 'sub_goals', locals: {sub_goals: @goal.children}
   .col-md-3
