--- a/app/views/goals/_sub_goals.slim
+++ b/app/views/goals/_sub_goals.slim
@@ -1,5 +1,6 @@
 - if(sub_goals)
   /h4 #{pluralize(sub_goals.count,"Child goal")}
+  h3 We will demonstrate this when we...
   ol.sub_goal
     - sub_goals.each do |sub_goal|
       li
