changd name to 'GDS Vision & Goals Dashboard'

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -25,7 +25,7 @@ html
             span.icon-bar
             span.icon-bar
             span.icon-bar
-          = link_to "GDS Operational Dashboard", "/", class: "navbar-brand"
+          = link_to "GDS Vision & Goals Dashboard", "/", class: "navbar-brand"
         #navbar.collapse.navbar-collapse
           /
             ul.nav.navbar-nav
