hide team input for new goals, make 'add new' into a button.

--- a/app/views/goals/show.html.slim
+++ b/app/views/goals/show.html.slim
@@ -8,7 +8,7 @@
     -if is_admin?
       .goal_controls
         = link_to :Edit, edit_goal_path, class: "btn-primary btn-sm"
-        = link_to "New child objective",new_goal_path(parent_id:@goal), class: "btn-success btn-sm"
+        = link_to "Create child",new_goal_path(parent_id:@goal), class: "btn-success btn-sm"
         .pull-right
           = link_to 'Destroy', @goal, method: :delete, data: { confirm: 'Are you sure? This cannot be undone.' }, class: "btn-sm btn-danger"
 
