--- a/app/views/goals/_form.html.slim
+++ b/app/views/goals/_form.html.slim
@@ -18,11 +18,12 @@ javascript:
     = f.label :name, class: "col-sm-2 control-label"
     .col-sm-10
       = f.text_field :name, class: "form-control"
-  .form-group
-    = f.label :team, class: "col-sm-2 control-label"
-    .col-sm-10
-      /= select :team, :team_id, Team.all.collect {|t| [ t.name, t.id]}, {include_blank: 'None'}, {class: "selectpicker"}
-      =collection_select :goal, :team_id, Team.all, :id, :name, {prompt:true,include_blank:true}, {class: :selectpicker}
+  / Hide Team selector for now...
+    .form-group
+      = f.label :team, class: "col-sm-2 control-label"
+      .col-sm-10
+        /= select :team, :team_id, Team.all.collect {|t| [ t.name, t.id]}, {include_blank: 'None'}, {class: "selectpicker"}
+        =collection_select :goal, :team_id, Team.all, :id, :name, {prompt:true,include_blank:true}, {class: :selectpicker}
   .form-group
     = f.label :group, class: "col-sm-2 control-label"
     .col-sm-10
