--- a/app/views/goals/index.html.slim
+++ b/app/views/goals/index.html.slim
@@ -8,9 +8,8 @@
     h3.well style="font-weight: 800; color: #300" Government is transformed by GDS supporting departments to deliver end to end services that are designed and built around <u>user needs.</u>
 
     h2 Objectives
-
-    =link_to "Add New", new_goal_path if is_admin?
-
+    .span style="margin: 2rem 0"
+      =link_to "Add New", new_goal_path,class: "btn-success btn-sm" if is_admin?
 
     == render partial: 'sub_goals', locals: {sub_goals: Goal.gds_goals}
   .col-md-3
