rename 'gov tech' to 'technology' in db seeds and add ability to rename groups via group_path

--- a/app/views/groups/show.html.slim
+++ b/app/views/groups/show.html.slim
@@ -4,6 +4,7 @@
       =link_to "Group:", groups_path
       |&nbsp;
       = @group.name
+      = link_to :Edit, edit_group_path
   .col-md-6
     .slug
       h2 Goals:
