--- a/app/views/groups/show.html.slim
+++ b/app/views/groups/show.html.slim
@@ -4,7 +4,7 @@
       =link_to "Group:", groups_path
       |&nbsp;
       = @group.name
-      = link_to :Edit, edit_group_path
+    h2 = link_to :Edit, edit_group_path
   .col-md-6
     .slug
       h2 Goals:
