--- a/app/assets/stylesheets/shared.sass
+++ b/app/assets/stylesheets/shared.sass
@@ -4,6 +4,38 @@
 .headings h2
   border-bottom: 1px solid #eee
 
+input.bignum
+  font-size: 4rem
+  width: 15rem !important
+  height: 7rem
+
+textarea.bigtext
+  font-size: 2rem
+  width: 45rem
+  height: 10rem
+
+h2.score
+  font-size: 5rem
+  color: #147
+  text-align: center
+
+.sub_score
+  text-align: center
+  .amount
+    font-size: 4.5rem
+    color: #147
+  .date
+    font-size: 1rem
+    color: #444
+
+.big_score
+  .amount
+    font-size: 10rem
+    font-weight: 800
+    text-color: #009
+  .date
+    font-size: 1rem
+    color: #444
 
 .goal_controls
   margin: 3rem 0 4rem 0
