clean up some score display stuff

--- a/app/assets/stylesheets/shared.sass
+++ b/app/assets/stylesheets/shared.sass
@@ -19,6 +19,8 @@ h2.score
   color: #147
   text-align: center
 
+/*TODO: DRY up our scores css */
+
 .sub_score
   text-align: center
   .amount
@@ -29,6 +31,7 @@ h2.score
     color: #444
 
 .big_score
+  text-align: center
   .amount
     font-size: 10rem
     font-weight: 800
