--- a/app/views/goals/_form.html.slim
+++ b/app/views/goals/_form.html.slim
@@ -17,7 +17,7 @@ javascript:
   .form-group
     = f.label :name, class: "col-sm-2 control-label"
     .col-sm-10
-      = f.text_field :name, class: "form-control"
+      = f.text_area :name, :cols=>50, :rows=>5, class: "bigtext form-control"
   / Hide Team selector for now...
     .form-group
       = f.label :team, class: "col-sm-2 control-label"
