--- a/app/views/goals/_sub_goals.slim
+++ b/app/views/goals/_sub_goals.slim
@@ -8,15 +8,13 @@ ol.sub_goal
       .col-md-7
         li
           h3
-            - if(is_admin? || sub_goal.children.count > 0)
-              =link_to sub_goal.name, sub_goal
-            - else
-              = sub_goal.name
-            | &nbsp;
-            small
-              =sub_goal.owner_name
-            .smaller
-              =pluralize(sub_goal.children.count,"Subgoal") unless sub_goal.children.empty?
+            =link_to sub_goal.name, sub_goal
+          small
+            = link_to 'Edit',edit_goal_path(sub_goal), {:class=>"btn-sm btn-primary"}
+          small
+            =sub_goal.owner_name
+          .smaller
+            =pluralize(sub_goal.children.count,"Subgoal") unless sub_goal.children.empty?
       .col-md-2.sub_score
         h3.amount = sub_goal.display_amount
         .date = sub_goal.current_display_date
