conoslidate OKR import script, some layout tweaks.

--- a/app/assets/stylesheets/shared.sass
+++ b/app/assets/stylesheets/shared.sass
@@ -1,12 +1,17 @@
 .vacancy
   background-color:  #ffa !important
 
+.mini-edit
+  display: inline
+  font-size: 1.5rem
+  color: #999
+
 .headings h2
   border-bottom: 1px solid #eee
 
 input.bignum
   font-size: 4rem
-  width: 15rem !important
+  width: 10rem !important
   height: 7rem
 
 textarea.bigtext
