--- a/app/views/goals/index.html.slim
+++ b/app/views/goals/index.html.slim
@@ -10,10 +10,11 @@
     h2 Objectives
     .span style="margin: 2rem 0"
       =link_to "Add New", new_goal_path,class: "btn-success btn-sm" if is_admin?
+    - Group.all.each do |group|
+			h3 =group.name
+			== render partial: 'sub_goals', locals: {sub_goals: group.top_level_goals}
 
-== render partial: 'sub_goals', locals: {sub_goals: Goal.gds_goals}
-
-= form_tag import_group_okrs_goals_path, multipart: true, class: "form-inline" do
+= form_tag import_okrs_goals_path, multipart: true, class: "form-inline" do
   .form-group
     =file_field_tag :file, :class=>"form-control"
   =submit_tag "Import", :class=>"btn btn-primary"
