--- a/app/views/goals/index.html.slim
+++ b/app/views/goals/index.html.slim
@@ -14,7 +14,8 @@
 			h3 =group.name
 			== render partial: 'sub_goals', locals: {sub_goals: group.top_level_goals}
 
-= form_tag import_okrs_goals_path, multipart: true, class: "form-inline" do
-  .form-group
-    =file_field_tag :file, :class=>"form-control"
-  =submit_tag "Import", :class=>"btn btn-primary"
+- if is_admin?
+  = form_tag import_okrs_goals_path, multipart: true, class: "form-inline" do
+    .form-group
+      =file_field_tag :file, :class=>"form-control"
+    =submit_tag "Import", :class=>"btn btn-primary"
