--- a/app/views/scores/edit.html.slim
+++ b/app/views/scores/edit.html.slim
@@ -1,10 +1,7 @@
 .page-header
-  = link_to scores_path, class: 'btn btn-default' do
+  = link_to @score.goal, class: 'btn btn-default' do
     span.glyphicon.glyphicon-list-alt
     |  Back
-  = link_to @score, class: 'btn btn-primary' do
-    span.glyphicon.glyphicon-info-sign
-    |  Show
   = link_to 'Destroy', @score, method: :delete, data: { confirm: 'Are you sure? This cannot be undone.' }, class: "btn btn-danger"
   h1 Editing Score
 
