--- a/app/assets/stylesheets/shared.sass
+++ b/app/assets/stylesheets/shared.sass
@@ -1,6 +1,11 @@
 .vacancy
   background-color:  #ffa !important
 
+.vision
+  font-weight: 800
+  font-size: 6rem
+  color: #003
+
 .mini-edit
   display: inline
   font-size: 1.5rem
@@ -87,6 +92,8 @@ ol.sub_goal
       color: #888
       font-weight: 200
       font-size: 1.5rem
-
+    .goal
+      font-size: 4rem
+      
 .slug:hover
   background-color: #ddd
