add basic GOV.UK template gem some clashes with bootstrap

--- a/app/assets/stylesheets/shared.sass
+++ b/app/assets/stylesheets/shared.sass
@@ -1,3 +1,21 @@
+body
+  padding-top: 0 !important
+
+h1, h2, h3
+  font-family: "nta", Arial, sans-serif
+
+#footer
+  margin-top: 5rem
+
+// for now, override GOV.UK colors
+.goal_controls a
+  color: #fff !important
+
+ol.sub_goal li
+  list-style: decimal !important
+  h3.goal
+    line-height: 3rem !important
+
 .vacancy
   background-color:  #ffa !important
 
@@ -20,6 +38,7 @@ input.bignum
   width: 10rem !important
   height: 7rem
 
+
 textarea.bigtext
   font-size: 2rem
   width: 45rem
@@ -28,7 +47,9 @@ textarea.bigtext
 h2.score
   font-size: 5rem
   color: #147
+  font-family: "nta", Arial, sans-serif
   text-align: center
+
 
 /*TODO: DRY up our scores css */
 
