style tweaks, add proposition name to header.

--- a/app/assets/stylesheets/shared.sass
+++ b/app/assets/stylesheets/shared.sass
@@ -8,13 +8,14 @@ h1, h2, h3
   margin-top: 5rem
 
 // for now, override GOV.UK colors
-.goal_controls a
+a.btn-sm
   color: #fff !important
 
 ol.sub_goal li
   list-style: decimal !important
   h3.goal
     line-height: 3rem !important
+    margin-bottom: 0
 
 .vacancy
   background-color:  #ffa !important
