add deadline to goals

--- a/app/assets/stylesheets/shared.sass
+++ b/app/assets/stylesheets/shared.sass
@@ -7,6 +7,9 @@ h1, h2, h3
 #footer
   margin-top: 5rem
 
+.deadline
+  font-size: 1.25rem
+  
 // for now, override GOV.UK colors
 a.btn-sm
   color: #fff !important
