--- a/app/views/goals/_sub_goals.slim
+++ b/app/views/goals/_sub_goals.slim
@@ -5,12 +5,14 @@ ol.sub_goal
         li
           h3.goal
             =link_to sub_goal.name, sub_goal
-            -if is_admin?
-              =link_to edit_goal_path(sub_goal) do
-                .mini-edit
-                  .glyphicon.glyphicon-edit
+            /
+              -if is_admin?
+                =link_to edit_goal_path(sub_goal) do
+                  .mini-edit
+                    .glyphicon.glyphicon-edit
           small
               =sub_goal.owner_name
+          .deadline =sub_goal.display_deadline
           .smaller
             =pluralize(sub_goal.children.count,"Subgoal") unless sub_goal.children.empty?
       .col-md-2.sub_score
